Linkedin-Clone Commited

--- a/Instagram-Clone/index.html
+++ b/Instagram-Clone/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/Instagram-Clone/css/style.css" />
     <title>Instagram</title>
   </head>
   <body
@@ -82,7 +82,7 @@
           <li class="nav-item">
             <a class="nav-link" href="https://www.instagram.com/yasinalperbingul" target="_blank"
               ><img
-                src="/assets/profilepic.jpg"
+                src="/Instagram-Clone/assets/profilepic.jpg"
                 class="mb-2"
                 style="width: 23px; height: 23px; border-radius: 50%;"
             /></a>
@@ -133,7 +133,7 @@
             </a>
             <a href="https://www.instagram.com/yasinalperbingul" style="text-decoration: none;" target="_blank">
               <img
-                src="/assets/profilepic.jpg"
+                src="/Instagram-Clone/assets/profilepic.jpg"
                 class="storyphoto img-fluid"
               />
             <span class="storytext">yasinalperbingul</span>
@@ -561,7 +561,7 @@
                   >
                   <span>
                   <img
-                    src="/assets/profilepic.jpg"
+                    src="/Instagram-Clone/assets/profilepic.jpg"
                     class=""
                     style="
                       width: 60px;
@@ -605,7 +605,7 @@
                   <div>
                     <span
                       ><img
-                        src="/assets/kablosuz_beyin.png"
+                        src="/Instagram-Clone/assets/kablosuz_beyin.png"
                         style="width: 30px; height: 30px; border-radius: 50%"
                       />
                     </span>
@@ -623,7 +623,7 @@
                   <div class="mt-3">
                     <span
                       ><img
-                        src="/assets/code_craft.png"
+                        src="/Instagram-Clone/assets/code_craft.png"
                         style="width: 30px; height: 30px; border-radius: 50%"
                       />
                     </span>
@@ -641,7 +641,7 @@
                   <div class="mt-3">
                     <span
                       ><img
-                        src="/assets/blank-profile-picture-973460_1280.png"
+                        src="/Instagram-Clone/assets/blank-profile-picture-973460_1280.png"
                         style="width: 30px; height: 30px; border-radius: 50%"
                       />
                     </span>
@@ -659,7 +659,7 @@
                   <div class="mt-3">
                     <span
                       ><img
-                        src="/assets/pUN5K_jL_400x400.jpg"
+                        src="/Instagram-Clone/assets/pUN5K_jL_400x400.jpg"
                         style="width: 30px; height: 30px; border-radius: 50%"
                       />
                     </span>
